--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <meta property="og:url" content="http://kevintaylor.la" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Kevin Taylor - Web Developer" />
-<meta property="og:image" content="<%= image_path('headshot.JPG') %>"/>
+<meta property="og:image" content="<%= image_url('headshot.JPG') %>"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -116,7 +116,6 @@
 		}
     }
 </style>
-
   </head>
 
   <body>
