--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="<%= image_url('icon.png') %>" />
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css">
+  a:focus{
+      color: #333 !important;
+  }
 	*{
 		font-family: 'Anton', sans-serif;
 	}
